# scag-model-analysis

./: .gitignore  CLAUDE.md  check_install.py  pyproject.toml
data/input/: i5-cmcp-2019-sec1.csv  i5-cmcp-2019-sec2.csv  i5-cmcp-2019-sec3.csv  i5-cmcp-2045-sec1.csv  i5-cmcp-2045-sec2.csv  i5-cmcp-2045-sec3.csv
data/output/: I5_2019_2045_All_Sections_Comprehensive_Analysis.xlsx
src/: __init__.py  aadt_calculator.py  capacity_analyzer.py  config.py  data_loader.py  excel_generator.py  main.py  peak_hour_analyzer.py  truck_analyzer.py  utils.py
tests/: i5-cmcp-2019-sec1.xlsx  test_aadt_actual.py  test_data_loader.py  test_truck_analyzer.py  test_utils.py
